feat(sparql-aas): Upgrade to FAAAST 1.0.1. Replace aas4j transformation with XSLT based approach.